Fixed mobile nav spacing and changed tab icon

--- a/css/custom.css
+++ b/css/custom.css
@@ -40,8 +40,7 @@
     display: none;
 
     position: absolute;
-    padding-top: 2rem;
-    padding-bottom: 1rem;
+
 
     width: 10em;
     right: 0rem;
@@ -51,7 +50,9 @@
     color: black;
     z-index: 5;
 }
-.drop-content{
+.drop-item{
+    padding-top: 2rem;
+
     border-bottom: solid silver 1px;
 }
 
